--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
             <li><a href="#about">About</a></li>
         </ul>        
     </div>
-    <!--this is the content stuff    -->
-    <div class="gradient">
-        <h2>Scroll down</h2>
-    </div>
+    <div class="card">
+        <div class="video-container">
+            <video autoplay>
+                <source src="EverWarm.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+    </div>  
     <div class="content">
         <h1 class="fade-in">Welcome</h1>
         <h1 class="fade-in right">To</h1>
-        <h1 class="fade-in">Group</h1>
-        <h1 class="fade-in right">2</h1>
-        <h1 class="fade-in">Product</h1>
+
     </div>
 
     <p class="anim"><span class="ever">Ever</span><span id="parallax-text" class="warm">Warm</span></p>
@@ -37,7 +39,7 @@
                 </div>
                 <div class="image-about-container">
 
-                    <img src="img.avif" class="image-about">
+                    <img src="/img.avif" class="image-about">
                 </div>
                     <div class="paragraph">
                     
