--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="card">
         <div class="video-container">
-            <video autoplay>
+            <video autoplay controls>
                 <source src="EverWarm.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
