--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="image-about-container">
 
-                    <img src="/img.avif" class="image-about">
+                    <img src="img.avif" class="image-about">
                 </div>
                     <div class="paragraph">
                     
