--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
             <div class="youtube">
                 <h2>Youtube</h2>
-                <a href="https://www.youtube.com/@ethanlukeestillore8539" target="_blank" class="button youtube">
+                <a href="https://youtube.com/@everwarm-t8j?si=yuXZkGUzb41aLfPZ" target="_blank" class="button youtube">
                     <i class="fab fa-youtube"></i> Visit now
                 </a>
                 <p>(image carousel)</p>
