--- a/index.html
+++ b/index.html
@@ -17,15 +17,7 @@
             <li><a href="#product">Product</a></li>
         </ul>        
     </div>
-    <div class="card">
-        <div class="video-container">
-            <video autoplay controls>
-                <source src="EverWarm.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            <p>expanding card</p>
-        </div>
-    </div>  
+
     <div class="content">
         <h1 class="fade-in">Welcome</h1>
         <h1 class="fade-in right">To</h1>
@@ -42,9 +34,18 @@
                     <p>Ever warm is group 2's chosen product. We have conducted this as our item because of our brainstorming ideas!</p>
                 </div>
                 <div class="image-about-container">
+                    <div class="video-container">
+                        <video controls>
+                            <source src="EverWarm.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                </div>    
 
-                    <img src="img.avif" class="image-about">
-                </div>
+
+            </div>
+            <div class="paragraph">
+                <p>These self-heating jackets are a fresh solution for maintaining warmth during cold weather without the need for batteries or external power sources. Designed withadvanced thermal-regulating fabrics, these jackets utilize eco-friendly materials that can retain heat through natural processes that  ensure your comfort. Ideal for outdoor enthusiasts, commuters, and eco-conscious consumers, these jackets combine sustainability with practicality. Lightweight yet durable, they provide excellent insulation while reducing environmental impact for people who care. Their sleek design and high-quality construction make them a good choice for anyone seeking warmth without heavy and bulky layers. Fabulous for going to the mall or fitting into trendy fashionable winter attires. self-heating jackets redefine modern cold-weather gear.</p>
             </div>
         </div>
         <br><br><br><br><br><br>
