--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
                     </div>
                 </div>    
 
-
+            <div class="container">
+                <div class="youtube">
+                    <h3>about us</h3>
+                </div>
             </div>
             <div class="paragraph">
                 <p>These self-heating jackets are a fresh solution for maintaining warmth during cold weather without the need for batteries or external power sources. Designed withadvanced thermal-regulating fabrics, these jackets utilize eco-friendly materials that can retain heat through natural processes that  ensure your comfort. Ideal for outdoor enthusiasts, commuters, and eco-conscious consumers, these jackets combine sustainability with practicality. Lightweight yet durable, they provide excellent insulation while reducing environmental impact for people who care. Their sleek design and high-quality construction make them a good choice for anyone seeking warmth without heavy and bulky layers. Fabulous for going to the mall or fitting into trendy fashionable winter attires. self-heating jackets redefine modern cold-weather gear.</p>
