--- a/index.html
+++ b/index.html
@@ -57,13 +57,24 @@
         <br><br><br><br><br><br>
         <div class="container">
 
-            <div class="youtube">
-                <h2>Youtube</h2>
-                <a href="https://youtube.com/@everwarm-t8j?si=yuXZkGUzb41aLfPZ" target="_blank" class="button youtube">
-                    <i class="fab fa-youtube"></i> Visit now
-                </a>
-
+            <div id="youtube" class="section2">
+                <br><br><br><br><br><br>
+                <div class="container">
+                    <div class="youtube">
+                        <h2>Youtube</h2>
+                        <div class="video-container">
+                            <iframe width="560" height="315" src="https://streamable.com/x6uhac" 
+                            title="YouTube video player" frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen></iframe>
+                        </div>
+                        <a href="https://www.youtube.com/@EverWarm_PH" target="_blank" class="button youtube">
+                            <i class="fab fa-youtube"></i> Visit now
+                        </a>
+                    </div>
+                </div>
             </div>
+
         </div>
     </div>   
     <div id="product" class="section3">
