--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
                     <div class="youtube">
                         <h2>Youtube</h2>
                         <div class="video-container">
-                            <iframe width="560" height="315" src="https://streamable.com/x6uhac" 
-                            title="YouTube video player" frameborder="0" 
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                            allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/GBCe4gt-3-8?si=LLfJ70wLzsB3LEQx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/KUGp_LuDric" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                         <a href="https://www.youtube.com/@EverWarm_PH" target="_blank" class="button youtube">
                             <i class="fab fa-youtube"></i> Visit now
